# TA_robotpadi

./: .gitignore  frames_2025-06-29_16.32.59.gv  frames_2025-07-06_21.36.02.gv  smc_controller_backup.py
install/: local_setup.sh  setup.sh
install/robotpadi/share/ament_index/resource_index/package_run_dependencies/: robotpadi
install/robotpadi/share/ament_index/resource_index/parent_prefix_path/: robotpadi
install/robotpadi/share/robotpadi/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotpadi/share/robotpadi/cmake/: robotpadiConfig-version.cmake  robotpadiConfig.cmake
install/robotpadi/share/robotpadi/config/: diff_drive_controller.yaml  teleop_joystick.yaml  twist_mux.yaml
install/robotpadi/share/robotpadi/environment/: ament_prefix_path.dsv  path.dsv
install/robotpadi/share/robotpadi/launch/: robot_sim.launch.py  rsp.launch.py  teleop_joy.launch.py  teleop_key.launch.py
install/robotpadi/share/robotpadi/meshes/: Wheel_FL_Link.STL  Wheel_FR_Link.STL  Wheel_RL_Link.STL  Wheel_RR_Link.STL  base_link.STL
install/robotpadi/share/robotpadi/models/sand_heightmap/: model.config  model.sdf
install/robotpadi/share/robotpadi/models/sand_heightmap/materials/scripts/: sand.material
install/robotpadi/share/robotpadi/rviz/: view.rviz
install/robotpadi/share/robotpadi/urdf/: gazebo_plugin.xacro  imu.xacro  main.xacro  robot_padi.xacro  ros2_control.xacro
install/robotpadi/share/robotpadi/worlds/: worlds.sdf
install/robotsatyo_pkg/share/robotsatyo_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robotsatyo_pkg/share/robotsatyo_pkg/urdf/: robot_padi.urdf
install/robotsatyo_pkg/share/robotsatyo_pkg/worlds/: worlds.sdf
log/: latest_build
robotpadi/: CMakeLists.txt  package.xml
robotpadi/config/: diff_drive_controller.yaml  twist_mux.yaml
robotpadi/launch/: robot_sim.launch.py  rsp.launch.py  teleop_joy.launch.py
robotpadi/meshes/: Wheel_FL_Link.STL  Wheel_RR_Link.STL
robotpadi/script/: smc_controller.py  teleop_keyboard_arrow.py
robotpadi/urdf/: gazebo_plugin.xacro  imu.xacro  main.xacro  robot_padi.xacro  ros2_control.xacro
robotpadi/worlds/: worlds.sdf
robotsatyo_pkg/: package.xml  setup.cfg  setup.py
robotsatyo_pkg/launch/: view_robot_launch.py
smc_controller/: package.xml  setup.cfg
smc_controller/smc_controller/: smc_controller.py
smc_controllers/: package.xml  setup.cfg  setup.py
src/coordinate_publisher/: package.xml  setup.cfg  setup.py
src/coordinate_publisher/coordinate_publisher/: coordinate_publisher.py
src/line_creator/: package.xml  setup.cfg  setup.py
src/line_creator/line_creator/: line_creator.py
src/robot_localization_bringup/: package.xml  setup.cfg  setup.py
src/robot_localization_bringup/config/: ekf.yaml
src/robot_localization_bringup/launch/: localization.launch.py
src/robotpadi/: package.xml
src/robotpadi/config/: diff_drive_controller.yaml  ekf.yaml
src/robotpadi/launch/: robot_localization.launch.py  robot_sim.launch.py
src/robotpadi/models/maize/: gt_map.csv
src/robotpadi/urdf/: gazebo_plugin.xacro  imu.xacro  robot_padi.xacro
src/robotpadi/worlds/: worlds.sdf
src/smc_controller/: setup.py
src/smc_controller/smc_controller/: smc_controller.py
src/trajectory_publisher/: package.xml  setup.py
src/trajectory_publisher/trajectory_publisher/: trajectory_publisher.py
